--- a/app/globals.css
+++ b/app/globals.css
@@ -3,9 +3,11 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --color-primary: #dcff50;
+  --color-secondary: #7b61ff;
+  --color-heading: #f5f5f7;
+  --color-text: rgba(255, 255, 255, 0.6);
+  --color-background: #090909;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,11 +19,5 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: black;
 }
