--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,9 @@
   --color-heading: #f5f5f7;
   --color-text: rgba(255, 255, 255, 0.6);
   --color-background: #090909;
+  html {
+    font-size: 62.5%;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
